--- a/core/_buttons.scss
+++ b/core/_buttons.scss
@@ -11,7 +11,7 @@
   -webkit-font-smoothing: antialiased;
   font-weight: 600;
   line-height: 1;
-  padding: $space-s $space-m;
+  padding: $space-small $space-medium;
   text-align: center;
   text-decoration: none;
   transition: background-color $base-duration $base-timing;
