--- a/core/_variables.scss
+++ b/core/_variables.scss
@@ -13,13 +13,14 @@ $base-font-size: 1em;
 $base-line-height: 1.5;
 $heading-line-height: 1.2;
 
-// Other Sizes
-$space-xs: 0.5em;
-$space-s: 0.75em;
-$space-m: 1.5em;
-$space-l: 3em;
-$space-xl: 4.5em;
+// Spacing
+$space-x-small: 0.5em;
+$space-small: 0.75em;
+$space-medium: 1.5em;
+$space-large: 3em;
+$space-x-large: 4.5em;
 
+// Other Sizes
 $base-border-radius: 3px;
 $base-z-index: 0;
 
